@@ -8,6 +8,11 @@ Log message:
         (RLIMIT_NICE, RLIMIT_RTPRIO): Add.
         (RLIMIT_NLIMITS): Adjust.
 
+2006-03-18: Denis Barbier
+  There is a typo in CVS in the last chunk of sysdeps/unix/sysv/linux/mips/bits/resource.h
+    s/_RLIMIT_RTPRIO/__RLIMIT_RTPRIO/
+
+libc/sysdeps/unix/sysv/linux/mips/bits/resource.h
 ===================================================================
 RCS file: /cvs/glibc/libc/sysdeps/unix/sysv/linux/bits/resource.h,v
 retrieving revision 1.17
@@ -138,7 +143,7 @@ diff -u -r1.7 -r1.8
 +  /* Maximum realtime priority allowed for non-priviledged
 +     processes.  */
 +  __RLIMIT_RTPRIO = 14,
-+#define RLIMIT_RTPRIO _RLIMIT_RTPRIO
++#define RLIMIT_RTPRIO __RLIMIT_RTPRIO
 +
 +  __RLIMIT_NLIMITS = 15,
    __RLIM_NLIMITS = __RLIMIT_NLIMITS
