@@ -26,6 +26,8 @@ glibc (2.3.6-4) UNRELEASED; urgency=low
   * Fix forward-backward-collation.diff: the change in strcoll_l.c has to
     be applied at several places.  Closes: #357390.
   * Update timezone data files to tzdata2006b (no data change, only comments).
+  * Fix resource_h.diff: there was a typo for mips:
+    s/_RLIMIT_RTPRIO/__RLIMIT_RTPRIO/  (Closes: #357419)
 
  -- Clint Adams <schizo@debian.org>  Fri, 17 Mar 2006 14:15:59 -0500
 
